Fix overflow issues

--- a/css/modules/split-text.css
+++ b/css/modules/split-text.css
@@ -13,10 +13,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  padding: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   background: var(--background);
-  min-height: 100vh;
   user-select: none;
 }
 
@@ -25,12 +26,14 @@
   flex-direction: column;
   align-items: center;
   gap: var(--gap);
+  max-width: 100%;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .split-text__item {
+  max-width: 100%;
   font-size: var(--fz);
   text-transform: uppercase;
 }
@@ -75,12 +78,18 @@
 }
 
 .split-text__part {
+  display: flex;
   height: 0.5em;
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
 }
 
 .split-text__bottom {
-  display: flex;
   align-items: flex-end;
+}
+
+.split-text__part span {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
